Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3.2
  FEATURES:

  CHANGES:
    * Improved response of current track and albums applet on data updates.
    * Use system date/time format for default name when saving user playlists.

  BUGFIXES:
    * Fixed incorrect layout of applets on startup.
    * Fixed Collection Browser not properly updating after a full rescan,
      necessitating Amarok to be closed and reopened. Fixes various bugs. 
      (BR 172542)
    * Fixed cover found dialog closing when download failed or is cancelled.
    * Fixed failure when fetching cddb info for audio CDs in localized Amarok.
    * Fixed expanding items in collection browser by double-click, in
      double-click mode.
    * Fixed crash when adding new folders repeatedly in podcast/saved playlist
      browsers.
    * Fixed context menu actions acting on wrong indices in the playlist
      browser.
    * Fixed incorrect text about "rpath" argument to collection scanner.
      (BR 236076)


VERSION 2.3.2-Beta 1
  FEATURES:
    * Podcasts can now be filtered on provider and grouped in folders. (BR 219519)
    * Amarok 1.4 Database Importer: added support for importing labels.
      Thanks to Matěj Laitl for the patch. (BR 218996)
    * Shortcuts: Added "Replay current track" shortcut. (BR 217081)
    * Edit filter dialog: added "added" and "last played" date filters.
    * File browser: added forward and back buttons for accessing navigate history.
    * Organize Dialog: added a way to save multiple file formats as presets. (BR 122672)
    * Filtering: added default presets to the drop down menu of the collection
      search widget.
    * Filtering: track format can now be used as filter keyword in the
      collection browser, e.g. "format:flac".
    * Filtering: track file size can now be used as filter keyword in the
      collection browser, e.g. "filesize:<12" for tracks under 12Mb;
      "filesize:25" for tracks that are between 25 and 26Mb.